# poetry-editable-extensions

./: .gitignore  build.py  pyproject.toml  setup.py
src/example/moduleb_src/: bindings.cpp
